--- a/outn.cls
+++ b/outn.cls
@@ -102,7 +102,14 @@
  \pdfinfo{
    /Author (The Open University)
    /Title  (\@modulecode\ \@tntitle\ \@tnyear)
-}
+}%
+% Logo preamble:
+\ifpdf%
+  \def\@oulogofile{ou_greyscale_masterlogo_29mm.pdf}
+\else%
+  \def\@oulogofile{ou_greyscale_masterlogo_29mm.eps}
+\fi%
+%%
   \thispagestyle{frontpage}
 \if@specsolns
 %
@@ -127,7 +134,11 @@
 \begin{adjustwidth}{0cm}{-4cm}
   \begin{tabular}{@{}p{4.5cm}@{}p{12.5cm}@{}}
   \vspace{0.2cm}
-  \includegraphics[width=3.5cm]{ou_greyscale_masterlogo_29mm}%{ou_compact_grey_24mm}
+  \IfFileExists{\@oulogofile}{%
+    \includegraphics[width=3.5cm]{\@oulogofile}%
+  }{%
+    \fbox{\parbox[t][2cm][c]{3.5cm}{\centering OU Logo}}%
+  }%
 &
 \vspace{0.2cm}\relax
 \parbox{8cm}{
