--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -20,6 +20,7 @@
 \versionno{1.0} %optional
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
 %\nocutoffdate % Suppresses "Cut-off date" text from appearing
+\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
