--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -15,12 +15,11 @@
 \tntitle{Title of TN}
 \tnyear{2015B}
 \copyrightyear{2012} % If different from \abyear
-
 %\tutoronlytitle{ {\bfseries Title for tutor-only environment\par}}      % specifies title for 'Tutor-only' environment
 %\studentonlytitle{Title for student-only environment\par}  % specifies title for 'Student-only' environment
 %\specsolnscolor{blue} % can be used to change text colour in specsolns mode
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
-
+\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
 %% alternative way of updating the above information
 %\metadataset{faculty=STEM, 
 %            module title=Title of Module,
