--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -19,6 +19,7 @@
 \timeallowed{3 hours}
 \copyrightyear{2016} %Optional: same as \examyear if omitted
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
+\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
