--- a/icmatemplate.tex
+++ b/icmatemplate.tex
@@ -13,6 +13,7 @@
 \cutoffdate{26 November 2014}
 \coversmaterialin{Units 1,2 and 3.}
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
+%\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
