Warnings for deprecated commands
The following commands are deprecated and now issue warnings:
\marks (should use \mk)
\conflation (should use \session -- ouexam.cls only)

--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -93,13 +93,13 @@ Preamble text, if desired.
 \question[(essay question)]{25}
 \emph{This question is about nothing in particular.}
 \begin{enumerate}
-\item hello\marks 4
+\item hello\mk 4
 \item goodbye running a long time until it goes over to a second line perhaps about now.
 \[ a^2 + b^2 = c^2.\]
 \item Another item
 \begin{enumerate}
-\item Sub sub\marks 2
-\item Sub sub question that runs a long time until it goes over to a second line\marks 2
+\item Sub sub\mk 2
+\item Sub sub question that runs a long time until it goes over to a second line\mk 2
 \end{enumerate}
 \end{enumerate}
 
@@ -199,13 +199,13 @@ Choose an option.
 
 \question[(changing subquestion labels)]{8}
 \begin{enumerate}[(i)]
-\item enumitem lets you change the labelling of subquestions\marks 4
+\item enumitem lets you change the labelling of subquestions\mk 4
 \item goodbye running a long time until it goes over to a second line perhaps
 \end{enumerate}
 
 \question[(changing subquestion labels 2)]{8}
 \begin{enumerate}[(A)]
-\item enumitem lets you change the labelling of subquestions\marks 4
+\item enumitem lets you change the labelling of subquestions\mk 4
 \item goodbye running a long time until it goes over to a second line perhaps
 \end{enumerate}
 
