--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -67,7 +67,7 @@ Inside solutions, notes can be added to the marks.\mk[Like this]{4}
 \end{solution}
 
 \question
-The second question.\marks{3}
+The second question.\mk{3}
 
 \begin{solution}
 Solutions can be placed in-line, to generate solution files from the same source.\mk[Be generous!]{3}
