--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -83,12 +83,12 @@
 \remark{For making short comments for tutors.}
 
 \begin{enumerate}
-\item hello\marks 4
+\item hello\mk 4
 \item goodbye running a long time until it goes over to a second line perhaps
 \item 
 \begin{enumerate}
-\item Sub sub\marks 2
-\item Sub sub\marks 2
+\item Sub sub\mk 2
+\item Sub sub\mk 2
 \end{enumerate}
 \subtotal[for part \theenumi]{4}
 \end{enumerate}
@@ -109,12 +109,12 @@ You can place references inside the references environment.
 % if you want to try using the studenttex option.
 \begin{solution}
 \begin{enumerate}
-\item First part of the solution, inside the solution environment. \marks{4}
-\item Some mathematics: $\int_0^\infty x$ and \[a^2=b^2=c^2\marks{2}\] 
+\item First part of the solution, inside the solution environment. \mk{4}
+\item Some mathematics: $\int_0^\infty x$ and \[a^2=b^2=c^2\mk{2}\] 
 
 \remark{Award no marks for this part of the question.}
 
-\item Marks with marginal comments. \marks[Method. Ignore all attempts at this question.]{40}
+\item Marks with marginal comments. \mk[Method. Ignore all attempts at this question.]{40}
 
 \item Starred enumerate environment gives you inline enumerate:
 \begin{enumerate*}
@@ -123,7 +123,7 @@ You can place references inside the references environment.
 \item third part\mk{3}
 \end{enumerate*}
 
-\item The final part.\marks{3}
+\item The final part.\mk{3}
 
 \subtotal[for part~\theenumi]{1}
 \end{enumerate}
@@ -311,7 +311,7 @@ Choose an inline option from four columns.
 \item yes
 \end{inlineoptions}
 
-\question
+\question*
 Choose an inline option at 1.5 spacing.
 \begin{inlineoptions}[1.5]{3} %optional parameter specifies line spacing
 \item yes
@@ -340,13 +340,13 @@ Choose an option.
 
 \question[(changing subquestion labels)]{8}
 \begin{enumerate}[(i)]
-\item enumitem lets you change the labelling of subquestions\marks 4
+\item enumitem lets you change the labelling of subquestions\mk 4
 \item goodbye running a long time until it goes over to a second line perhaps
 \end{enumerate}
 
 \question[(changing subquestion labels 2)]{8}
 \begin{enumerate}[(A)]
-\item enumitem lets you change the labelling of subquestions\marks 4
+\item enumitem lets you change the labelling of subquestions\mk 4
 \item goodbye running a long time until it goes over to a second line perhaps
 \end{enumerate}
 
