--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -311,16 +311,15 @@ For fuller details of the possibilities with |enumitem|, see the documentation o
 Marks can be placed anywhere in the document (including inside displayed equations). You may need to  compile your |tex| file twice in order for the marks to be correctly aligned.
 
 \begin{desc}
-|\marks{<n>}|
+|\mk{<n>}|
 \end{desc}
 Places |<n>| in square brackets in the right hand margin on the line. 
 
-\emph{Warning:} This feature has redefined the \TeX\ primitive |\marks| command. 
 
 \begin{desc}
-|\mk{<n>}|
+|\marks{<n>}|
 \end{desc}
-A synonym for |\marks|, for those moving from OUTeX.
+A synonym for |\mk|. This command has been deprecated and will be removed in a later release.
 
 If using the experimental |markcheck| option, when compiled, \LaTeX\ will check whether the sum of the entries inside |\marks| and |\mk| commands adds up to the parameter |<marks>| specified by the preceding |\question|. This has some limitations (e.g.\ it won't understand |\tfrac{1}{2}|).
 
@@ -1168,7 +1167,110 @@ This section can be omitted unless you need/want to know a bit more about the cl
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Using \texttt{ouicma.cls}}
-Not yet written!
+
+\subsection{Preamble}
+\subsubsection{Commands to be used in the preamble}
+\begin{desc}
+|\faculty{...}|
+\end{desc}
+The name of the faculty (optional, default is `Faculty of Science, Technology, Engineering and Mathematics')
+\begin{desc}
+|\modulecode{...}|
+\end{desc}
+Sets the code of the module (required).
+\begin{desc}
+|\moduletitle{...}|
+\end{desc}
+Sets the title (i.e./ name) of the module (required).
+
+\begin{desc}
+|\icmatitle{...}|
+\end{desc}
+Sets the title for the iCMA (required).
+
+\begin{desc}
+|\icmasubtitle{...}|
+\end{desc}
+Sets the subtitle for the iCMA (optional).
+
+\begin{desc}
+|\icmayear{...}|
+\end{desc}
+Sets the year/presentation for this iCMA (required).
+
+\begin{desc}
+|\copyrightyear{...}|
+\end{desc}
+Sets the date for copyright, used in the footer on the front page (optional, default is same as |\icmayear|).
+
+
+\begin{desc}
+|\suppno{...}| %can be omitted for "DRAFT"
+\end{desc}
+Sets the SUPP number, mainly used by DPU/LTS (optional, default is `DRAFT').
+
+\begin{desc}
+|\versionno{...}| %optional
+\end{desc}
+Sets the version number, mainly used by DPU/LTS (optional, default is blank).
+
+\begin{desc}
+|\optiontext{...}|
+\end{desc}
+Changes the text that appears at the top of multi-choice questions (optional, default is `Options:'). Does not need to be in the preamble, so you can change the text for options part-way through the document.
+
+\begin{desc}
+|\cutoffdate{...}|
+\end{desc}
+Specifies the cut-off date for the iCMA.
+
+\begin{desc}
+|\coversmaterialin{...}|
+\end{desc}
+Specifies the material covered by the iCMA.
+
+\begin{desc}
+|\instructions{...}|
+\end{desc}
+Command for the instructions/rubric on the front page of the booklet (optional, but defaults to `No special instructions specified.')
+
+\begin{desc}
+|\declaration{...}|
+\end{desc}
+Allows you to change the declaration on page 3 of the iCMA. This is optional, and the default is as follows.
+
+\begin{verbatim}
+\textbf{Read and complete the following --- otherwise your work will 
+not be marked}\\\bigskip
+The University has to ensure as far as possible that the work submitted by 
+students is their own and that credit is not given for unreferenced material 
+from other sources. The University statement `What constitutes 
+plagiarism or cheating' appears in the Plagiarism Policy Document and in 
+your Assessment Handbook and you are expected to have familiarised 
+yourself with it. Please be aware that the University may subject your 
+work to checks (including computerised checks) for plagiarism and in some 
+instances may need to seek further information from you. Any cases where 
+a basis for concern about the originality of the work is identified will be 
+considered under the University's policy on academic conduct. 
+
+I confirm that I have read the statement `What constitutes plagiarism or 
+cheating' and that my answers will be my own work. \bigskip
+
+Signature:\\[20pt]
+
+\rule{\textwidth}{2pt}\\[20pt]
+
+Name (in block capitals):\\[20pt]
+
+\rule{\textwidth}{2pt}\\[20pt]
+
+Personal identifier (PI): \\[20pt]
+
+\rule{\textwidth}{2pt}\\[20pt]
+\end{verbatim}
+
+
+
 
 \begin{desc}
 |\oulogofilebase{...}|
@@ -1177,11 +1279,12 @@ Overrides the internally-specified for the name of the OU logo, currently |OU_Ma
 
 \LaTeX\ files that use \textsf{OU-SUPPS} class files do \emph{not} need the OU logo to compile: if the specified logo file is not present, a placeholder box will be inserted instead.
 
+
 \begin{desc}
 |\metadataset{key=value}|  
 \end{desc}
 As an alternative to specifying the above commands individually, they can 
-all  be configured using a |key=value| approach in the |\metadataset|
+all be configured using a |key=value| approach in the |\metadataset|
 command; for example:
 \begin{verbatim}
 \metadataset{faculty=STEM, 
@@ -1197,6 +1300,119 @@ command; for example:
             %declaration=your own declaration here,
             }
 \end{verbatim}
+\subsection{Creating questions}
+
+\subsubsection{Question syntax}
+
+\begin{desc}
+|\question|
+\end{desc}
+Creates a new question. Unlike other class files in \textsf{OU-SUPPS}, this takes no parameters.
+
+\subsubsection{Subquestions}
+To create subquestions, use the standard \LaTeX\ |enumerate| environment.
+
+\begin{verbatim}
+\begin{enumerate}
+\item ...
+\item ...
+...
+\end{enumerate}
+\end{verbatim}
+
+These environments can be nested to create subsubquestions, etc. The default numbering style is |(a),(b),...| for subquestions, and |(i),(ii),...| for subsubquestions.
+
+The class file |ouab.cls| loads the |enumitem| package, which provides a number of features, two of which we list here.
+
+\begin{itemize}
+\item Changing the numbering: Start the environment using, e.g.\ |\begin{enumerate}[A.]|, to modify the numbering system to |A.,B.,...|.
+\item Resuming numbering after a break: use |\begin{enumerate}[resume]| to continue counting from the previous time an enumerate environment at this level was called.
+\end{itemize} 
+
+For fuller details of the possibilities with |enumitem|, see the documentation on its CTAN entry.
+
+\subsubsection{Marks}
+Marks can be placed anywhere in the document (including inside displayed equations). You may need to  compile your |tex| file twice in order for the marks to be correctly aligned.
+
+\begin{desc}
+|\mk{<n>}|
+\end{desc}
+Places |<n>| in square brackets in the right hand margin on the line. 
+
+\begin{desc}
+|\marks{<n>}|
+\end{desc}
+A synonym for |\mk|. This command has been deprecated and will be removed in a later release.
+
+
+\subsubsection{Multiple choice} 
+
+Multiple choice options can be produced using the following commands.
+
+The text appearing at the top of each list of options can be changed using the |\optiontext{<title>}| command. This command can be used in the premable, or at any point in the document.
+
+\begin{desc}
+|\begin{options}|\\
+|   \item ...|\\
+|   \item ...|\\
+|\end{options}|
+\end{desc}
+Creates a list of options, with the text of each |\item| starting on a new line. Options are labelled |A.,B.,C.,...|.
+
+\begin{desc}
+|\begin{inlineoptions}[<line spacing>]{<columns>}|\\
+|   \item ...|\\
+|   \item ...|\\
+|\end{inlineoptions}|
+\end{desc}
+Creates a list of options, displayed in |<columns>| number of columns, equally spaced. Each successive |\item| is placed sequentially from left to right, then starting a new line as necessary. Options are labelled |A.,B.,C.,...|.
+
+The optional parameter |<line spacing>| can be used to increase the spacing between each line. However, note that this also affect spacing within options, which can have undesired effect if your options include, e.g., a |matrix| environment.
+
+\begin{desc}
+|\noitem|
+\end{desc}
+This command can be used within  |inlineoptions| to leave a `blank' in the list of options. This is particularly useful on the final line if you have fewer |\item|s left than the specified number of |<columns>|.
+
+
+\subsubsection{Answer boxes}
+
+\begin{desc}
+|\answerbox[<n>]|
+\end{desc}
+
+Places a 1.2cm $\times$ 1.2cm answer box in the right-hand margin. The optional parameter |<n>| allows you to place |<n>| answer boxes side-by side. If omitted, |<n>| is taken to be 1. Numbers greater than 4 are unlikely to look good.
+
+\begin{desc}
+|\wideanswerbox[<n>]|
+\end{desc}
+
+Places a 2.4cm $\times$ 1.2cm wide answer box in the right-hand margin. The optional parameter |<n>| allows you to place |<n>| answer boxes side-by side. If omitted, |<n>| is taken to be 1. Numbers greater than 2 are unlikely to look good.
+
+
+\subsection{Technical info}
+
+|ouab.cls| loads the following packages automatically, so you do not need to call |\usepackage{...}| to use the features provided by these.
+
+\begin{itemize}
+\item |geometry| to set page margins, sizes, etc
+\item |fancyhdr| for formatting headings
+\item |graphicx| for handling images, etc
+\item |changepage| to adjust page widths automatically
+\item |array| extends the |array| and |tabular| environments.
+\item |amsmath| loaded with the |fleqn| option to left-align displayed mathematics.
+\item |amssymb| extra mathematical symbols
+\item |lastpage| for knowing how many pages the document contains
+\item |ifthen| for internal latex coding
+\item |enumitem| with options |inline| and |shortlabels|. This is a powerful tool that will help preparing subquestions (see later).
+\item |marginnote| for handling marks, etc in the margin.
+\item |tikz| to draw boxes in the margin.
+\item |mdframed| to format the question headers.
+\end{itemize}
+
+
+
+
 %
 %
 %
