--- a/icmatemplate.tex
+++ b/icmatemplate.tex
@@ -9,11 +9,13 @@
 \moduletitle{Title of Module}
 \icmayear{2015}
 \icmatitle{Title of iCMA}
+\icmasubtitle{Subtitle of iCMA} % optional
 \suppno{WEB 12345 6} %can be omitted for "DRAFT"
+\versionno{1.2} % Optional
 \cutoffdate{26 November 2014}
 \coversmaterialin{Units 1,2 and 3.}
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
-%\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
+\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -31,8 +33,8 @@ need to use a calculator to answer some questions.
 The completed iCMA should be returned to
 \begin{quotation}
 M140 Module Team\\
-Department of Mathematics and Statistics\\
-Faculty of Mathematics, Computing and Technology\\
+School of Mathematics and Statistics\\
+Faculty of Science, Technology, Engineering and Mathematics\\
 The Open University\\
 Walton Hall\\
 Milton Keynes\\
